# cryptanalysis

./: .gitignore  .gitmodules  Makefile  README.md  encodings-generator-saeed.py  encodings-generator.py  go.mod  go.sum  main.go
2bit-cnds/: .gitignore  derive.py  prop_smt.py  propagator.py  smt_prop.py
2bit-debug/: 2bit_eq.py
clause-verifier/: main.py
cmd/: combine_logs.go  root.go  run.go  summarize.go  task.go
collision/: sha256.py  verify.py  verify2.py  verify_from_log.py  verify_from_table.py
driver/: Cargo.toml  README.md
driver/scripts/: enc_cube.sh  gen_cubes.sh  parse_log.sh  verify.py
driver/src/: main.rs  solutions.rs
encoders/nejati-collision/: .gitignore  Makefile  card_exact.py  card_exact_tl.py  diff-parser.cpp  diff-parser.h  formula.cpp  formula.h  main.cpp  prop_rules.db  retrieve_table.cpp  retrieve_table.h  sha256x.cpp  sha256x.h  util.cpp  xformula.cpp  xformula.h
encoders/nejati-preimage/: Makefile  formula.cpp  md4.cpp  md4.h  (+1 more)
proof-analyzer/: main.py
rules-generator/: .gitignore  main.cpp  rules-gen.py  rules_gen.py  two-bit.py  two_bit.py
scripts/: benchmark.py  encodings-generator-saeed.py
semi-free-start/: .gitignore  convert.py  sha256.py
solvers/maplesat-crypto/: .gitignore  CMakeLists.txt  clauses_validator.py
solvers/maplesat-crypto/core/: Crypto.cc  Crypto.h  Dimacs.h  Main.cc  Solver.cc  Solver.h
solvers/maplesat-crypto/mtl/: template.mk
solvers/maplesat-crypto/simp/: Main.cc  SimpSolver.cc  depend.mk
solvers/maplesat-crypto/test/: CMakeLists.txt  test.cc
tools/: encodings-generator-saeed.py
(+281 files in other folders)
